--- a/src/Nobetci.Web/Views/Shared/_Layout.cshtml
+++ b/src/Nobetci.Web/Views/Shared/_Layout.cshtml
@@ -37,6 +37,18 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,400;9..40,500;9..40,600;9..40,700&family=Instrument+Serif:ital@0;1&display=swap" rel="stylesheet">
     
+    <!-- Google Analytics 4 (GA4) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-4GE9SRXDNG"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-4GE9SRXDNG', {
+            'page_location': window.location.href,
+            'page_path': window.location.pathname
+        });
+    </script>
+    
     @await RenderSectionAsync("Styles", required: false)
 </head>
 <body>
